--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -1728,7 +1728,7 @@
                                                     </connections>
                                                 </button>
                                                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="kYJ-Zq-ZcG">
-                                                    <rect key="frame" x="488" y="14" width="20" height="20"/>
+                                                    <rect key="frame" x="492" y="16" width="20" height="20"/>
                                                 </activityIndicatorView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="L" translatesAutoresizingMaskIntoConstraints="NO" id="C1I-kr-cpQ">
                                                     <rect key="frame" x="18" y="52" width="12" height="16"/>
@@ -1771,12 +1771,12 @@
                                                 <constraint firstItem="uUJ-YE-kOp" firstAttribute="leading" secondItem="sJz-JL-Jdf" secondAttribute="leadingMargin" constant="-8" id="HSO-DN-bbL"/>
                                                 <constraint firstItem="kYJ-Zq-ZcG" firstAttribute="top" secondItem="OMk-lI-vrX" secondAttribute="bottom" constant="-20" id="RvC-g7-GdZ"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="uUJ-YE-kOp" secondAttribute="bottom" id="Ry9-dL-CiL"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="kYJ-Zq-ZcG" secondAttribute="trailing" constant="4" id="SYj-3g-zsb"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="kYJ-Zq-ZcG" secondAttribute="trailing" id="SYj-3g-zsb"/>
                                                 <constraint firstItem="0dm-jH-4Zo" firstAttribute="leading" secondItem="sJz-JL-Jdf" secondAttribute="leadingMargin" id="YRS-53-kh8"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="g7b-mM-AuN" secondAttribute="trailing" constant="8" id="ZiL-IV-hfi"/>
                                                 <constraint firstItem="OMk-lI-vrX" firstAttribute="centerY" secondItem="0dm-jH-4Zo" secondAttribute="centerY" id="b3I-88-qvy"/>
                                                 <constraint firstItem="kYJ-Zq-ZcG" firstAttribute="centerY" secondItem="OMk-lI-vrX" secondAttribute="centerY" id="i3l-An-giO"/>
-                                                <constraint firstItem="kYJ-Zq-ZcG" firstAttribute="centerY" secondItem="0dm-jH-4Zo" secondAttribute="centerY" id="kOp-dp-1Jh"/>
+                                                <constraint firstItem="kYJ-Zq-ZcG" firstAttribute="centerY" secondItem="0dm-jH-4Zo" secondAttribute="centerY" constant="2" id="kOp-dp-1Jh"/>
                                                 <constraint firstItem="g7b-mM-AuN" firstAttribute="top" secondItem="0dm-jH-4Zo" secondAttribute="bottom" constant="12" id="knm-bv-nV7"/>
                                                 <constraint firstItem="C1I-kr-cpQ" firstAttribute="top" secondItem="g7b-mM-AuN" secondAttribute="top" id="mbW-QJ-fLh"/>
                                                 <constraint firstItem="kYJ-Zq-ZcG" firstAttribute="centerX" secondItem="OMk-lI-vrX" secondAttribute="centerX" constant="-16" id="ntq-1q-b8K"/>
@@ -1819,7 +1819,7 @@
                                                     <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
                                                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6xt-Y7-Eqb">
-                                                    <rect key="frame" x="488" y="14" width="20" height="20"/>
+                                                    <rect key="frame" x="492" y="16" width="20" height="20"/>
                                                 </activityIndicatorView>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APd-T7-hO9">
                                                     <rect key="frame" x="8" y="8" width="151" height="32"/>
@@ -1875,10 +1875,10 @@
                                                 <constraint firstItem="xCR-Dz-gD2" firstAttribute="leading" secondItem="rFK-m3-Djo" secondAttribute="trailing" constant="-42" id="Lbg-dz-Zdj"/>
                                                 <constraint firstItem="xCR-Dz-gD2" firstAttribute="leading" secondItem="APd-T7-hO9" secondAttribute="trailing" id="QNs-Au-gQ3"/>
                                                 <constraint firstItem="xCR-Dz-gD2" firstAttribute="centerY" secondItem="APd-T7-hO9" secondAttribute="centerY" id="R4I-4f-EVf"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="6xt-Y7-Eqb" secondAttribute="trailing" constant="4" id="Ubt-kX-2oU"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="6xt-Y7-Eqb" secondAttribute="trailing" id="Ubt-kX-2oU"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="XEd-mN-6tB" secondAttribute="trailing" constant="-8" id="dFB-pC-0vZ"/>
                                                 <constraint firstItem="6xt-Y7-Eqb" firstAttribute="centerY" secondItem="5xc-9B-osm" secondAttribute="centerY" id="fHC-hJ-B0k"/>
-                                                <constraint firstItem="6xt-Y7-Eqb" firstAttribute="centerY" secondItem="APd-T7-hO9" secondAttribute="centerY" id="g1H-ZU-nnE"/>
+                                                <constraint firstItem="6xt-Y7-Eqb" firstAttribute="centerY" secondItem="APd-T7-hO9" secondAttribute="centerY" constant="2" id="g1H-ZU-nnE"/>
                                                 <constraint firstItem="rFK-m3-Djo" firstAttribute="top" secondItem="TFC-gO-p5o" secondAttribute="topMargin" constant="4" id="hLE-5J-mNH"/>
                                                 <constraint firstItem="5xc-9B-osm" firstAttribute="leading" secondItem="xCR-Dz-gD2" secondAttribute="trailing" constant="4" id="lbZ-K3-zdT"/>
                                                 <constraint firstItem="5xc-9B-osm" firstAttribute="leading" secondItem="xCR-Dz-gD2" secondAttribute="trailing" constant="8" id="mW2-0v-Zpj"/>
