--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -332,7 +332,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="N4k-nE-dcU" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Y0-SB-VNa">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="1Y0-SB-VNa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1811,12 +1811,12 @@
         <image name="imgThreeDots" width="600" height="600"/>
         <image name="imgTinkerLogo" width="87" height="92"/>
         <image name="imgTrash" width="400" height="400"/>
-        <image name="imgTrianglifyHeader" width="400" height="187"/>
+        <image name="imgTrianglifyHeader" width="970" height="129"/>
         <image name="particle-vertical-blue" width="200" height="185"/>
         <image name="sunflower" width="1" height="12"/>
         <image name="v" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Gcf-aV-58w"/>
+        <segue reference="tNr-Sb-zVv"/>
     </inferredMetricsTieBreakers>
 </document>
